<resources>
    <string name="app_name">LaterList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="later_list_tool_bar_unread">我的列表</string>
    <string name="later_list_tool_bar_done">存档</string>

    <string name="tab_layout_all_list">全部</string>
    <string name="tab_layout_collect_list">收藏</string>
    <string name="tab_layout_tag_list">标签</string>

    <string name="favorite_category_header_title">收藏夹</string>
    <string name="recycle_category_header_title">回收站</string>

    <string name="later_all_tool_bar_title">列表</string>
    <string name="later_all_item_list_tool_bar_title">Item列表</string>

    <string name="later_item_title">Title: </string>
    <string name="later_item_content">Content: </string>
    <string name="later_item_type">Type: </string>
    <string name="later_item_tag">Tag: </string>
    <string name="update_time">Update Time: </string>

    <string name="create_folder_title">新建文件夹</string>
    <string name="create_folder_button_confirm">确定</string>
    <string name="create_folder_button_cancel">取消</string>

    <string name="create_website_center_text">新建网址</string>
    <string name="create_website_url">链接: </string>
    <string name="create_website_title">标题: </string>
    <string name="folder_title">文件夹: </string>
    <string name="tag_title">标签: </string>
    <string name="create_website_content">内容/描述: </string>
    <string name="create_website_button_confirm">确定</string>
    <string name="create_website_button_cancel">取消</string>

    <string name="create_image_center_text">新建图片</string>

    <string name="create_tag_center_text">新建标签</string>

</resources>