<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    tools:context=".CreateWebsiteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/create_website_center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_website_center_text"
            android:textSize="16sp"
            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_website_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_website_url"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/create_website_url_ev"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_website_url_ev" />

        <EditText
            android:id="@+id/create_website_url_ev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/create_website_url_tv"
            app:layout_constraintTop_toBottomOf="@id/create_website_center_text" />

        <TextView
            android:id="@+id/create_folder_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_website_title"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/create_website_title_ev"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_website_title_ev" />

        <EditText
            android:id="@+id/create_website_title_ev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/create_folder_title_tv"
            app:layout_constraintTop_toBottomOf="@id/create_website_url_ev" />

        <!-- add the fragment that allows user to select folder and tags here -->

        <include
            android:id="@+id/fragment_folder_tag_selector"
            layout="@layout/fragment_folder_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/create_website_title_ev" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/create_website_tag_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fragment_folder_tag_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/create_website_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_website_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_website_tag_chip_group" />

        <EditText
            android:id="@+id/create_website_content_ev"
            android:layout_width="match_parent"
            android:gravity="start|top"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:layout_height="160dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/create_website_content_tv" />

        <Button
            android:id="@+id/create_website_button_confirm"
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_folder_button_confirm"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/create_website_button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_website_content_ev"/>

        <Button
            android:id="@+id/create_website_button_cancel"
            android:layout_marginRight="4dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_folder_button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/create_website_button_confirm"
            app:layout_constraintTop_toTopOf="@id/create_website_button_confirm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>